--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     <h2>9. Contact Information</h2>
     <div class="contact-info">
         <p><strong>For privacy-related questions or concerns:</strong></p>
-        <p>Email: privacy@superwork.com</p>
-        <p>Phone: +1 (555) 123-4567</p>
-        <p>Address: 123 Business Street, Suite 100, City, State 12345</p>
+        <p>Email: info@aidclaos.com </p>
+        <p>Phone: +856-21 410 051, +856-30 526 2044 </p>
+        <p>Address:NNN Building (5th Floor) Phonsinuan RD.Ban Phonsinuan, Sisattanak District Vientiane, Laos5 </p>
     </div>
 
     <h2>10. Compliance</h2>
