add privacy policy page

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="contact-info">
         <p><strong>For privacy-related questions or concerns:</strong></p>
         <p>Email: info@aidclaos.com </p>
-        <p>Phone: +856-21 410 051 </p>
+        <p>Phone: +856-21 410 051 .</p>
         <p>Address:NNN Building (5th Floor) Phonsinuan RD.Ban Phonsinuan, Sisattanak District Vientiane, Laos5 </p>
     </div>
 
